--- a/content/about.html
+++ b/content/about.html
@@ -9,3 +9,7 @@ title: "About"
   <img src="/james-shakespeare.jpg" alt="James Shakespeare" />
   <figcaption>Credit: <a href="https://www.instagram.com/erallphotography/">Erica Rallo</a></figcaption>
 </figure>
+
+<h2>Colophon</h2>
+
+<p>Font credits, tech used, github repo link, etc. goes here</p>
